<resources>
    <string name="app_name">Popular Movies</string>
    <string name="action_settings">Settings</string>

    <string name="api_error">Error while fetching data</string>
    <string name="sort_by">Sort By</string>
    <string name="sort_popularity">Sort by Most Popular</string>
    <string name="sort_rating">Sort by Highest Rated</string>
    <string name="filter_favorites">Show only Favorites</string>

    <string name="title_activity_movie_details">Movie</string>
    <string name="rating_denominator">/10</string>
    <string name="trailers">Trailers</string>
    <string name="reviews">Reviews</string>
    <string name="share_trailer">Share Trailer</string>

    <string name="title_activity_review">Review</string>

    <!-- Content descriptions for accessibility -->
    <string name="content_desc_movie_poster">Movie poster</string>
    <string name="content_desc_backdrop_image">Movie backdrop image</string>
    <string name="content_desc_video_thumbnail">Video thumbnail</string>
</resources>
