<ScrollView
    android:id="@+id/scroll_view"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipChildren="false"
    tools:context=".ui.MovieDetailsFragment">

    <RelativeLayout
        android:id="@+id/scroll_view_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipChildren="false"
        android:paddingBottom="@dimen/margin_for_fab">

        <ImageView
            android:id="@+id/backdrop"
            android:layout_width="match_parent"
            android:layout_height="@dimen/details_backdrop_height"
            android:contentDescription="@string/content_desc_backdrop_image"
            tools:background="#ddd"
            />

        <ImageView
            android:id="@+id/poster"
            android:layout_width="@dimen/details_poster_width"
            android:layout_height="@dimen/details_poster_height"
            android:layout_marginLeft="@dimen/margin_large"
            android:layout_marginStart="@dimen/margin_large"
            android:layout_marginTop="@dimen/details_poster_margin_top"
            android:contentDescription="@string/content_desc_movie_poster"
            tools:background="#ccc"
            />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/backdrop"
            android:layout_marginEnd="@dimen/margin_large"
            android:layout_marginLeft="@dimen/margin_large"
            android:layout_marginRight="@dimen/margin_large"
            android:layout_marginStart="@dimen/margin_large"
            android:layout_marginTop="@dimen/margin_default"
            android:layout_toEndOf="@id/poster"
            android:layout_toRightOf="@id/poster"
            android:ellipsize="end"
            android:maxLines="2"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            tools:text="The Hunger Games: Mockingjay - Part 2"
            />

        <TextView
            android:id="@+id/release_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/title"
            android:layout_marginEnd="@dimen/margin_default"
            android:layout_marginLeft="@dimen/margin_large"
            android:layout_marginRight="@dimen/margin_default"
            android:layout_marginStart="@dimen/margin_large"
            android:layout_marginTop="2dp"
            android:layout_toEndOf="@id/poster"
            android:layout_toRightOf="@id/poster"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            tools:text="2015"
            />

        <LinearLayout
            android:id="@+id/rating_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/release_date"
            android:layout_marginLeft="@dimen/margin_large"
            android:layout_marginStart="@dimen/margin_large"
            android:layout_marginTop="-8dp"
            android:layout_toEndOf="@id/poster"
            android:layout_toRightOf="@id/poster"
            android:clipChildren="false"
            android:gravity="bottom"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Display2"
                android:textColor="?android:attr/textColorPrimary"
                tools:text="7.3"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_default"
                android:text="@string/rating_denominator"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="?android:attr/textColorSecondary"
                />

        </LinearLayout>

        <TextView
            android:id="@+id/synopsis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/poster"
            android:layout_centerHorizontal="true"
            android:layout_marginEnd="@dimen/margin_large"
            android:layout_marginLeft="@dimen/margin_large"
            android:layout_marginRight="@dimen/margin_large"
            android:layout_marginStart="@dimen/margin_large"
            android:layout_marginTop="@dimen/margin_large"
            android:lineSpacingMultiplier="@dimen/body_text_line_spacing"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            tools:text="With the nation of Panem in a full scale war, Katniss confronts President Snow in the final showdown. Teamed with a group of her closest friends – including Gale, Finnick, and Peeta – Katniss goes off on a mission with the unit from District 13 as they risk their lives to stage an assassination attempt on President Snow who has become increasingly obsessed with destroying her. The mortal traps, enemies, and moral choices that await Katniss will challenge her more than any arena she faced in The Hunger Games."
            />

        <TextView
            android:id="@+id/trailers_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/synopsis"
            android:layout_marginEnd="@dimen/margin_large"
            android:layout_marginLeft="@dimen/margin_large"
            android:layout_marginRight="@dimen/margin_large"
            android:layout_marginStart="@dimen/margin_large"
            android:layout_marginTop="@dimen/margin_default"
            android:paddingTop="@dimen/margin_large"
            android:text="@string/trailers"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:visibility="gone"
            />

        <HorizontalScrollView
            android:id="@+id/trailers_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/trailers_header"
            android:layout_marginTop="@dimen/margin_large"
            android:clipChildren="false"
            android:visibility="gone"
            tools:ignore="RtlHardcoded,RtlSymmetry">

            <LinearLayout
                android:id="@+id/trailers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clipChildren="false"
                android:divider="@drawable/divider_margin_default"
                android:orientation="horizontal"
                android:showDividers="middle"
                />

        </HorizontalScrollView>

        <TextView
            android:id="@+id/reviews_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/trailers_container"
            android:layout_marginEnd="@dimen/margin_large"
            android:layout_marginLeft="@dimen/margin_large"
            android:layout_marginRight="@dimen/margin_large"
            android:layout_marginStart="@dimen/margin_large"
            android:layout_marginTop="@dimen/margin_default"
            android:paddingTop="@dimen/margin_large"
            android:text="@string/reviews"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:visibility="gone"
            />

        <LinearLayout
            android:id="@+id/reviews"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/reviews_header"
            android:layout_marginTop="@dimen/margin_default"
            android:clipChildren="false"
            android:orientation="vertical"
            android:visibility="gone"
            />

    </RelativeLayout>

</ScrollView>
